# hadr-starter

./: .gitignore  CLAUDE.md  README.md  dashboard.html  implementation-notes.md  index.html  pyproject.toml
.github/workflows/: alerts.yml  ci.yml  sitrep.yml
data/: ne_110m_admin_0_countries.geojson
docs/: PRD.md  feed-blindspots.md
docs/adr/: 0001-cluster-is-the-unit-of-reporting.md  0002-severity-is-impact-consumed-not-modelled.md  0003-report-window-24h-sgt-slowonset-exempt.md  0004-attention-threshold-and-slice1-fallback.md  0005-quiet-means-model-asleep-page-always-refreshes.md  0006-loud-change-detection-six-boolean-triggers.md  0007-degrade-loud-and-persistent-state.md  0008-provenance-never-sum-rss-first.md  0009-preliminary-labelled-corrections-explicit.md  README.md
docs/planning/: BREADBOARD.md  CONTEXT.md  FRAME.md  QUESTIONS.md  REQS.md  SHAPING.md  SLICES.md  SPIKE-cross-feed-confidence.md  SPIKE-onshore-geocode.md
docs/solutions/: 2026-07-08-python-312-uv-env.md
scripts/: README.md  __init__.py  changes.py  cluster.py  decluster.py  gdacs.py  geo.py  inject.py  model.py  notify.py  reliefweb.py  render.py  severity.py  sitrep.py  state.py  telegram.py  usgs.py
scripts/git-hooks/: pre-push
skills/sitrep/: SKILL.md
tests/: helpers.py  test_changes.py  test_cluster.py  test_decluster.py  test_gdacs.py  test_gdacs_flow.py  test_geo.py  test_history.py  test_inject.py  test_notify.py  test_reliefweb.py  test_reliefweb_flow.py  test_render.py  test_report.py  test_severity.py  test_sitrep_flow.py  test_state.py  test_usgs.py
(+5 files in other folders)
