[project]
name = "hadr-monitor"
version = "0.1.0"
description = "A monitoring agent for humanitarian assistance and disaster response (HADR)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15.20",
]

# This is a runnable application (scripts/ + tests/), not a distributable library,
# so uv manages the environment without trying to build/install the project itself.
[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, import sorting

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
